--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-GOOGLE_APPLICATION_CREDENTIALS="C:\\Users\\shett\\Personal-Finance-Tracker\\Personal-Finance-Tracker\\backend\\serviceAccountKey.json"
+GOOGLE_APPLICATION_CREDENTIALS="path/to/serviceAccountKey.json"
